--- a/models/nr_datatypes_2.0.yaml
+++ b/models/nr_datatypes_2.0.yaml
@@ -475,7 +475,7 @@ NRFundingReference:
       type: keyword
       required: true
       label.cs: Číslo projektu
-      label.en: Project double
+      label.en: Project identifier
     projectName:
       type: fulltext
       label.cs: Název projektu
