--- a/packages/nr-metadata/setup.cfg
+++ b/packages/nr-metadata/setup.cfg
@@ -43,7 +43,7 @@ tests =
     pytest-invenio>=1.4.11
 
 [options.package_data]
-* = *.json, *.rst, *.md, *.json5, *.jinja2, *.po, *.mo, *.pot, *.js, *.jsx, *.less, *.jinja
+* = *.json, *.rst, *.md, *.json5, *.jinja2, *.po, *.mo, *.pot, *.js, *.jsx, *.less, *.jinja, *.overrides, *.variables
 
 [options.entry_points]
 invenio_assets.webpack =
