--- a/packages/oarepo-model-builder-nr/oarepo_model_builder_nr/models/nr_documents_2.0.yaml
+++ b/packages/oarepo-model-builder-nr/oarepo_model_builder_nr/models/nr_documents_2.0.yaml
@@ -151,6 +151,9 @@ DocumentModel:
             write: false
           label.cs: Klíčová slova
           label.en: Keywords
+          facets:
+            facet-class: nr_metadata.services.records.facets.KeywordsFacet
+            facet: true
         date:
           type: edtf
           marshmallow:
