--- a/packages/oarepo-model-builder-nr/oarepo_model_builder_nr/models/nr_documents_2.0.yaml
+++ b/packages/oarepo-model-builder-nr/oarepo_model_builder_nr/models/nr_documents_2.0.yaml
@@ -58,8 +58,8 @@ NRDocumentMetadata:
         faker: company
       ^label.cs: Vydavatel/é
       ^label.en: Publishers
-      ^help.cs: Zapište vydavatele. Můžete zapsat i více vydavatelů.
-      ^help.en: Write the name of the publisher. You can write more publishers.
+      ^help.cs: Uveďte vydavatele. Můžete zapsat i více vydavatelů.
+      ^help.en: Fill in the name of the publisher. You can write more publishers.
 
     dateModified:
       # The date of the last update to the resource, not metadata
